mapfishapp/src/main/webapp/app/css/xtheme-pwrs.css
/* ... */
.x-tab-strip-bottom .x-tab-strip-over .x-tab-left {
	background-image: url(images/pwrs/tabs/tab-btm-over-left-bg.gif);
}

.x-tab-strip-bottom .x-tab-strip-over .x-tab-right {
	background-image: url(images/pwrs/tabs/tab-btm-over-right-bg.gif);
}

.x-tab-strip-bottom .x-tab-strip-active .x-tab-right {
	background-image: url(images/pwrs/tabs/tab-btm-right-bg.gif);
}

.x-tab-strip-bottom .x-tab-strip-active .x-tab-left {
	background-image: url(images/pwrs/tabs/tab-btm-left-bg.gif);
}

.x-tab-strip .x-tab-strip-closable a.x-tab-strip-close {
	background-image:url(images/pwrs/tabs/tab-close.png);
}

.x-tab-strip .x-tab-strip-closable a.x-tab-strip-close:hover{
	background-image:url(images/pwrs/tabs/tab-close.png);
}

.x-tab-panel-body {
    border-color:#d0d0d0;
    background-color:#fff;
}

.x-tab-panel-body-top {
    border-top: 0 none;
}

.x-tab-panel-body-bottom {
    border-bottom: 0 none;
}

.x-tab-scroller-left {
    background-image:url(images/pwrs/tabs/scroll-left.gif);
    border-bottom-color:#d0d0d0;
}

.x-tab-scroller-left-over {
    background-position: 0 0;
}

.x-tab-scroller-left-disabled {
    background-position: -18px 0;
    opacity:.5;
    -moz-opacity:.5;
    filter:alpha(opacity=50);
    cursor:default;
}

.x-tab-scroller-right {
    background-image:url(images/pwrs/tabs/scroll-right.gif);
    border-bottom-color:#d0d0d0;
}

.x-tab-panel-bbar .x-toolbar, .x-tab-panel-tbar .x-toolbar {
    border-color:#d0d0d0;
}
.x-form-field{
    font:normal 12px 'latoregular',tahoma, arial, helvetica, sans-serif;
}

.x-form-text, textarea.x-form-field{
    background-color:#fff;
    background-image:none;
    border-color:#C1C1C1;
}

.x-form-select-one {
    background-color:#fff;
    border-color:#C1C1C1;
}

.x-form-check-group-label {
    border-bottom: 1px solid #d0d0d0;
    color: #333;
}

.x-editor .x-form-check-wrap {
    background-color:#fff;
}

.x-form-field-wrap .x-form-trigger{
    background-image:url(images/pwrs/form/trigger.gif);
    border-bottom-color:#b5b8c8;
}

.x-form-field-wrap .x-form-date-trigger{
    background-image: url(images/pwrs/form/date-trigger.gif);
}

.x-form-field-wrap .x-form-clear-trigger{
    background-image: url(images/pwrs/form/clear-trigger.gif);
}

.x-form-field-wrap .x-form-search-trigger{
    background-image: url(images/pwrs/form/search-trigger.gif);
}

.x-trigger-wrap-focus .x-form-trigger{
    border-bottom-color: #777777;
}

.x-item-disabled .x-form-trigger-over{
    border-bottom-color:#b5b8c8;
}

.x-item-disabled .x-form-trigger-click{
    border-bottom-color:#b5b8c8;
}

.x-form-focus, textarea.x-form-focus{
	border-color:#777777;
}

.x-form-invalid, textarea.x-form-invalid{
    background-color:#fff;
	background-image:url(images/pwrs/grid/invalid_line.gif);
	border-color:#c30;
}

.ext-webkit .x-form-invalid{
	background-color:#fee;
	border-color:#ff7870;
}

.x-form-inner-invalid, textarea.x-form-inner-invalid{
    background-color:#fff;
	background-image:url(images/pwrs/grid/invalid_line.gif);
}

.x-form-grow-sizer {
	font:normal 12px 'latoregular',tahoma, arial, helvetica, sans-serif;
}

.x-form-item {
    font:normal 12px tahoma, arial, helvetica, sans-serif;
}

.x-form-invalid-msg {
    color:#c0272b;
    font:normal 11px 'latoregular',tahoma, arial, helvetica, sans-serif;
    background-image:url(images/pwrs/shared/warning.gif);
}

.x-form-empty-field {
    color:gray;
}

.x-small-editor .x-form-field {
    font:normal 11px 'latoregular', arial, sans-serif;
}

.ext-webkit .x-small-editor .x-form-field {
    font:normal 12px 'latoregular', arial, sans-serif;
}

.x-form-invalid-icon {
    background-image:url(images/pwrs/form/exclamation.gif);
}

.x-fieldset {
    border-color:#CCCCCC;
}

.x-fieldset legend {
    font:bold;
    font-family: 'latobold'
    color:#777777;
}.x-btn{
	font:normal;
}

.x-btn button{
    font:normal;
    font-family: 'latoregular';
    color:#007EC3;
}
#tbar .x-btn button{
	color: white;
}

.x-btn .x-btn-text {
    font-style:normal;
    font-weight:normal;
    padding: 0 6px;
}
.x-btn .x-btn-text, .x-btn .x-btn-text:hover, .x-btn .x-btn-text:active, .x-btn .x-btn-text:focus {
	outline: none !important;
}

.x-btn-tl, .x-btn-tr, .x-btn-tc, .x-btn-ml, .x-btn-mr, .x-btn-mc, .x-btn-bl, .x-btn-br, .x-btn-bc{
	background-image:none;
	border-color: #007EC3;
}

.x-btn-click .x-btn-text, .x-btn-menu-active .x-btn-text, .x-btn-pressed .x-btn-text{
    color:#000;
}
/* Buttons definitions 
=======================================================================================================
Need to override every style element by element in cascade :)
*/
.x-btn:hover, .x-btn:hover .x-btn-text{
	background-color: #92C0E3;
	color: white;
}
.x-btn .btn-add:hover, .x-btn-text.add:hover {
    background-image: url("../img/famfamfam/add-white.png");
}

.x-btn-tl {border-top: 1px; border-left: 1px; border-bottom: 0px; border-right: 0px; border-style: solid; border-color: #007EC3;}
.x-btn-tc {border-top: 1px; border-left: 0px; border-bottom: 0px; border-right: 0px; border-style: solid; border-color: #007EC3;}
.x-btn-tr {border-top: 1px; border-left: 0px; border-bottom: 0px; border-right: 1px; border-style: solid; border-color: #007EC3;}
.x-btn-ml {border-top: 0px; border-left: 1px; border-bottom: 0px; border-right: 0px; border-style: solid; border-color: #007EC3;}
.x-btn-mc{}
.x-btn-mr {border-top: 0px; border-left: 0px; border-bottom: 0px; border-right: 1px; border-style: solid; border-color: #007EC3;}
.x-btn-bl {border-top: 0px; border-left: 1px; border-bottom: 1px; border-right: 0px; border-style: solid; border-color: #007EC3;}
.x-btn-bc {border-top: 0px; border-left: 0px; border-bottom: 1px; border-right: 0px; border-style: solid; border-color: #007EC3;}
.x-btn-br {border-top: 0px; border-left: 0px; border-bottom: 1px; border-right: 1px; border-style: solid; border-color: #007EC3;}
/* ... */

